# paper-repros

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/commands/: repro.md
.github/: copilot-instructions.md
notebook/network/routing/: 1993-packet-routing-in-dynamically-changing-networks-a-reinforcement-learning-approach.ipynb  1996-dynamic-source-routing-in-ad-hoc-wireless-networks.ipynb
scripts/: generate_packet_routing_1993_notebook.py
