[project]
name = "paper-repros"
version = "0.1.0"
description = ""
authors = [
    {name = "ReiRev",email = "reirev2913@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5,<7.0.0",
    "matplotlib>=3.10.1,<4.0.0",
    "nbconvert>=7.16.6,<8.0.0",
    "nbformat>=5.10.4,<6.0.0",
    "numpy>=2.2.5,<3.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
